--- a/data/moreinfo/templates/slot_template.mcfunction.j2
+++ b/data/moreinfo/templates/slot_template.mcfunction.j2
@@ -11,4 +11,4 @@ data modify storage moreinfo:temp Item.Slot set value 0b
 data modify block -2079934 0 -21744925 Items append from storage moreinfo:temp Item
 
 # Then, we move the shulker box item back to the player's inventory.
-loot replace entity @s inventory.33 1 mine -2079934 0 -21744925 minecraft:air{drop_contents: 1b}
+loot replace entity @s inventory.{{slot_number}} 1 mine -2079934 0 -21744925 minecraft:air{drop_contents: 1b}
